Bug 1665746 - Do not use self-hosted JS parameter name in decompiler. r=evilpie

Differential Revision: https://phabricator.services.mozilla.com/D90718