js/src/tests/non262/Set/non-iterable-error.js
@@ -1,0 +1,10 @@
+// Self-hosted JS code shouldn't be used for error message.
+
+try {
+  new Set(...[1]);
+} catch (e) {
+  assertEq(e.message, "1 is not iterable");
+}
+
+if (typeof reportCompare === "function")
+  reportCompare(0, 0);
